--- a/index.html
+++ b/index.html
@@ -15,72 +15,20 @@
 
     <!--Weather Condition Display starts here-->
     <div class="news-container-fluid col-12 col-lg-10 col-sm-10 mx-auto mt-5">
-        <span class="border border-primary-subtle">
-            <div class="bg--info-subtle bg-gradient p-1">
-
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-
-                    <div class="weather card-body">
-                        <div class="row no-gutters align-items-end">
-                            <div class="col mr-2">
-                                <img src=" " alt="Partly Cloudy Icon">
-                                <h2 class="city"></h2>
-                                <h1 class="Temp"></h1>
-                            </div>
+        <div class="bg--info-subtle bg-gradient p-1">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <div class="weather card-body">
+                    <div class="row no-gutters align-items-end">
+                        <div class="col mr-2">
+                            <img src=" " alt="Partly Cloudy Icon">
+                            <h2 class="city text-warning"></h2>
+                            <h1 class="Temp text-warning"></h1>
                         </div>
                     </div>
                 </div>
-
             </div>
-            <div class="row justify-content-md-center">
-                <div class="col-lg-4 col-sm-10 mt-2">
-                    <div class="card">
-                        <div class="card-body justify-content-md-end">
-                            <h5 class="card-title">Business</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-10 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Techhnology</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-10 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Science</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-10 mt-2">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">health</h5>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional
-                                content.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </span>
+        </div>
     </div>
-    <!--Test draggble-->
-
-
 
     <!--World Clock starts here-->
     <div class="world clock section-padding">
@@ -94,83 +42,83 @@
                 </div>
             </div>
 
-                <div class="row">
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/new_york.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>New York</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Singapore.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>Singapore</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Australia.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3>Australia</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/hong_kong.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>Hong Kong</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/Canada.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>Canada</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
-                        <div class="clock mb-30 text-center">
-                            <!--clock APi goes here-->
-                            <div class="clock">
-                                <image src="icons/London.png" alt=""></image>
-                                <div class="clock details">
-                                    <h3 class>London</h3>
-                                </div>
+            <div class="row">
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/new_york.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>New York</h3>
                             </div>
                         </div>
                     </div>
                 </div>
 
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Singapore.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>Singapore</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Australia.png" alt=""></image>
+                            <div class="clock details">
+                                <h3>Australia</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/hong_kong.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>Hong Kong</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/Canada.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>Canada</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-4">
+                    <div class="clock mb-30 text-center">
+                        <!--clock APi goes here-->
+                        <div class="clock">
+                            <image src="icons/London.png" alt=""></image>
+                            <div class="clock details">
+                                <h3 class>London</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
+    </div>
     </div>
     <!--My Broker starts here-->
     <div class="broker-container col-12 col-lg-10 mx-auto mt-5">
@@ -244,7 +192,7 @@
             </div>
         </div>
     </div>
-    
+
 
 
     <!--Stock, FX, BTC starts here-->
@@ -326,7 +274,7 @@
                                 Select files to upload:
                                 <input type="file" name="files[]" multiple>
                                 <input type="submit" value="Upload">
-                              </form>
+                            </form>
                         </div>
 
                     </div>
@@ -339,9 +287,9 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"
             integrity="sha512-DdX/YwF5e41Ok+AI81HI8f5/5UsoxCVT9GKYZRIzpLxb8Twz4ZwPPX+jQMwMhNQ9b5+zDEefc+dcvQoPWGNZ3g=="
